Fixed background overflow

--- a/src/scenemedia/sceneImageStyle.scss
+++ b/src/scenemedia/sceneImageStyle.scss
@@ -5,9 +5,6 @@
     height: auto;
     min-width: 100%;
     min-height: 100%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     background-color: #3a3a3a;
     background-repeat: no-repeat;
     background-position: center;
